@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_cache: Preserve non-cacheable headers forwarded from an origin 304
+                response. PR 55547. [Yann Ylavic]
+
   *) mod_cache: Don't add cached/revalidated entity headers to a 304 response.
                 PR 55547. [Yann Ylavic]
 
